--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "Your Discord Bot token",
+    "token": "MTI5OTA5NDY2ODI5Nzg5NTk5Nw.GYNqEh.9x06cweHpigcbTSZIXa1LiEAlU54MCj7IQ18jk",
     "prefix": "b!"
 }
